# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.40 2005/01/18 08:03:23 codeman Exp $

*GLI-0.01 (9 Feb 2004)

  18 Jan 2005; Preston Cody <codeman@gentoo.org>
  Took out unnecessary setting of random livecd root password. the cd already
  sets it randomly.
  
  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Took out an unneeded step from CC's run()

  15 Jan 2005; Preston Cody	<codeman@gentoo.org>
  Attempt at detecting and adding windows partitions to lilo.
  
  14 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added lilo code and cleaned up lilo code.  also do_partitioning renamed to 
  partition. fixed misc exit_status => exitstatus typo.
  
  11 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added basic code for resizing filesystems with pyparted. Fixed code for
  resizing ntfs and ext2/3.

  10 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed partition() in x86Template so that it scans through logicals and deletes
  before deleting containing extended partition. Also clears partition table to
  be safe before third pass.

  08 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added mount_network_shares. not able to test it from this computer.  
  will test when i get back to school.
  also added start_portmap to the client_controller as an always-do.
  agaffney says this is needed for NFS mounts to work.
  
  08 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Partial rewrite of partitioning code in x86Template. No longer shells out to
  parted to perform actions, now uses all pyparted calls. Code "works" in a
  test, but still needs lots of TLC. Also modified tests/install.py to work
  with x86Template and GLIClientConfiguration.

  07 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Initial move of partitioning code from ArchTemplate to x86Template.

  07 Jan 2005; Preston Cody <codeman@gentoo.org>