@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.40 2005/01/18 08:03:23 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.41 2005/01/19 02:48:29 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  18 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added code to x86Template to format newly created partitions. Also added
+  some error checking code.
 
   18 Jan 2005; Preston Cody <codeman@gentoo.org>
   Took out unnecessary setting of random livecd root password. the cd already
